# ccutils

./: .gitattributes  .gitignore  .justfile  .treefmt.toml  CODE_OF_CONDUCT  CODE_OF_CONDUCT.md  CONTRIBUTING  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-APACHE-2.0  LICENSE-MIT  LICENSE.md  README  README.md  SECURITY.md  deno.jsonc  flake.nix  init.sh  justfile  rust-analyzer.toml  rust-toolchain.toml  rustfmt.toml  shell.nix  todo
crates/ccutils/: Cargo.toml
crates/colorscheme/: Cargo.toml
crates/colorscheme/src/configuration/: test.rs
crates/colorscheme/src/manager/: utils.rs
crates/dots/: Cargo.toml
crates/embellish/: Cargo.toml  README.md
crates/genna/: Cargo.toml
crates/logline/: Cargo.toml
crates/logline/src/: default.rs  display.rs  info.rs  lib.rs  utils.1.rs  utils.rs
crates/logline/src/config/: default.rs  mod.rs  time.rs
crates/logline/src/utils/: mod.rs
crates/pankage/: Cargo.toml
crates/pankage/src/: lib.rs
crates/scraps/: Cargo.toml
crates/scraps/src/: main.rs
crates/scraps/src/utils/: get.rs  log.rs
crates/sysfo/: Cargo.toml
crates/sysfo/src/: cli.rs  general.rs  main.rs
crates/whers/: Cargo.toml
crates/whers/src/: cli.rs  find.rs  lib.rs  main.rs
crates/whers/src/cli/: clapped.rs
crates/whers/src/config/: mod.rs
crates/whers/src/core/: builder.rs  cmd.1.rs  cmd.2.rs  cmd.3.rs  cmd.rs  error.rs  mod.rs  search.1.rs  search.rs  utils.1.rs  utils.2.rs  utils.3.rs  utils.rs
crates/whers/src/data/: mod.rs  path_type.rs  search.rs
crates/whers/src/tools/: mod.rs
libraries/intime/: Cargo.toml  README.md
libraries/intime/src/: display.rs  info.rs  lib.rs  main.rs
libraries/intime/src/cli/: commands.rs  fetch.rs  greet.rs  mod.rs
libraries/intime/src/utils/: info.rs
libraries/logline/: Cargo.toml
libraries/logline/src/: lib.rs
libraries/logline/src/config/: core.rs  level.rs  mod.rs
libraries/logline/src/utils/: mod.rs
src/rust/: .gitignore  .mise.toml  .rustfmt.toml  Cargo.toml  README.md  flake.nix  treefmt.toml
src/rust/.cargo/: config.toml
src/rust/archive/: .rust-analyzer.toml  Cargo.toml
src/rust/lib/env/: CHANGELOG.md  Cargo.toml  README.md
src/rust/lib/log/: Cargo.toml
src/rust/lib/project/: Cargo.toml  README.md
types/erks/: Cargo.toml  README.md
types/erks/src/: config.rs  custom.rs  default.rs  io.rs  lib.rs  parse.rs  utils.rs
types/erks/src/modules/: config.rs  custom.rs  default.rs  mod.rs  parse.rs
types/erks/tests/: config.rs  custom.rs  default.rs  glob.rs  http.rs  io.rs  parse.rs  utils.rs
types/numba/: Cargo.toml
types/numba/src/: lib.rs  main.rs
types/numba/src/archive/: config.1.rs  new.rs
types/numba/src/benches/: mod.rs  parse_decimal.rs
types/numba/src/cli/: cli.rs
types/numba/src/config/: allocator.rs  cache.rs  mod.rs
types/numba/src/core/: cardinal.rs  fraction.rs  input.rs  mod.rs  numeral.rs  ordinal.rs  percentage.rs  roman.rs  rounding.rs  sign.rs  value.1.rs
types/numba/src/tests/: cardinal.rs  mod.rs  parse_decimal.rs
types/numba/src/tools/: cardinal.1.rs  cardinal.2.rs  cardinal.3.rs  cardinal.rs  input.rs  mod.rs  num2words.rs  remove_commas.rs
types/numeral/: Cargo.toml
types/numeral/src/: lib.rs  main.rs
types/numeral/src/config/: allocator.rs  mod.rs  simd.rs
types/numeral/src/error/: decimal.rs  mod.rs
types/numeral/src/functions/: cardinal.rs
types/numeral/src/methods/: cardinal.rs  from.rs  mod.rs  new.2.rs  new.rs  value.1.rs
types/numeral/src/tests/: mod.rs  parse_decimal.rs
types/numeral/src/traits/: cardinal.2.rs  cardinal.rs  input.rs  mod.rs
types/numeral/src/types/: input.rs  mod.rs  ordinal.rs  sign.rs
types/numeral/src/utilities/: cardinal.1.rs  cardinal.2.rs  cardinal.3.rs  input.rs  mod.rs  parse.rs
utilities/app/: Cargo.toml  README.md
utilities/app/src/: main.rs
utilities/app/src/cli/: init.rs  mod.rs
utilities/app/src/config/: mod.rs
utilities/app/src/utilities/: config.rs  mod.rs  pacman.rs
utilities/ccutils/: Cargo.toml
utilities/ccutils/src/: builder.rs  cli.rs  config.rs  installer.rs  main.rs  utils.rs  workspace.rs
utilities/ccutils/src/commands/: build.rs  clean.rs  install.rs  list.rs  mod.rs  uninstall.rs
utilities/ccutils/src/utilities/: get.rs
utilities/colorscheme/: Cargo.toml
utilities/colorscheme/src/: error.rs  main.rs
utilities/colorscheme/src/cli/: clapped.rs  main.2.rs  mod.1.rs  mod.rs
utilities/colorscheme/src/configuration/: core.rs  error.rs  mod.rs  test.rs
utilities/colorscheme/src/manager/: linux.rs  mod.rs  utils.rs  windows.rs
utilities/colorscheme/src/tools/: format.rs  locate.1.rs  locate.rs  mod.rs
utilities/embellish/: Cargo.toml  README  README.md
utilities/embellish/src/: lib.rs  print.rs
utilities/genna/: Cargo.toml
utilities/genna/src/: main.1.rs  main.rs
utilities/intime/: Cargo.toml  README.md
utilities/intime/src/: cli.rs  display.rs  info.rs  lib.rs  main.rs
utilities/intime/src/cli/: commands.1.rs  commands.rs  fetch.rs  greet.rs
utilities/intime/src/utils/: info.rs
utilities/scraps/: Cargo.toml
utilities/scraps/src/: lib.rs  main.rs
utilities/scraps/src/data/: mod.rs  products.rs
utilities/scraps/src/utils/: get.rs  log.rs  mod.rs
utilities/slink/: Cargo.toml
utilities/slink/src/: config.rs  error.rs  lib.rs  main.rs  symlink.1.rs  symlink.rs
utilities/sysfo/: Cargo.toml
utilities/sysfo/src/: battery.1.rs  battery.rs  cli.rs  duration.rs  error.rs  general.rs  hardware.rs  lib.rs  main.rs  power.rs  software.rs  time.rs
utilities/sysfo/src/core/: default.rs  error.rs  mod.rs  traits.rs
utilities/sysfo/src/utils/: cli.rs  default.rs  mod.rs
utilities/wallter/: Cargo.toml  README.md  ROADMAP.md
utilities/wallter/src/: consts.rs  error.rs  lib.rs  main.rs  prelude.rs
utilities/wallter/src/api/: default.rs  mod.rs  wallhaven.rs
utilities/wallter/src/cli/: mod.rs
utilities/wallter/src/config/: default.rs  mod.rs
utilities/wheres/: Cargo.toml
utilities/wheres/src/: main.rs
utilities/whers/: Cargo.toml
utilities/whers/src/: cli.rs  error.rs  lib.rs  main.2.rs  main.rs
(+469 files in other folders)
