[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Craig 'Craole' Cole <craole@tuta.io>"]
license = "MIT OR Apache-2.0"
description = "Various utilities for development."
homepage = "https://craole.cc/utils"
repository = "https://github.com/craole-cc/ccutils"
categories = [
  "command-line-utilities",
  "development-tools",
  "number conversion",
]

[workspace]
members = [
  "libraries/erks",
  "libraries/logline",
  "libraries/intime",
  "types/numba",
  "utilities/app",
  "utilities/dots",
  "utilities/colorscheme",
  "utilities/embellish",
  "utilities/genna",
  "utilities/grit",
  "utilities/scraps",
  "utilities/slink",
  "utilities/sysfo",
  "utilities/whers",
]
resolver = "2"

[workspace.lints.rust]
unsafe_code = { level = "forbid", priority = -1 }
unused = { level = "allow", priority = -2 }

[workspace.dependencies]
#| Handlers
thiserror = "2.0.9"
anyhow = "1.0.91"
once_cell = "1.20.2"
reqwest = "0.12.12"
scraper = "0.22.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
toml = "0.8.19"
toml_edit = "0.22.22"

#| Information
sysinfo = "0.33.1"
battery = "0.7.8"
chrono = "0.4.23"
iana-time-zone = "0.1.61"

#| Utilities
crossterm = "0.28.1"
clap = { version = "4.5.20", features = ["derive", "cargo"] }
clap_complete = "4.5.8"
directories = "5.0.1"
current_dir = "0.1.1"
glob = "0.3.1"
regex = "1"
# ignore = "0.4"
which = "7.0.1"
convert_case = "0.6.0"
genai = "0.1.16"

#| Types
num = "0.4.3"
uom = "0.36.0"
num2words = "1.0.0"
num-bigfloat = { version = "^1.7.1", default-features = false }
bigdecimal = "0.4.5"
rust_decimal = "1.36.0"

#| Development
dotenv-vault = "0.1.2"
dotenvy = "0.15.7"
criterion = "0.5.1"
proptest = "1.3"
test-case = "3.3"
tempfile = "3.15.0"
lru = "0.12"
dashmap = "6.1.0"
simd-json = "0.14.2"
cfg-if = "1.0"
mimalloc = { version = "0.1.43", features = ["secure"] }
