[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Craig 'Craole' Cole <craole@tuta.io>"]
license = "MIT"
description = "Various utilities for development."
homepage = "https://craole.cc/utils"
repository = "https://github.com/craole-cc/ccutils"
categories = [
  "command-line-utilities",
  "development-tools",
  "number conversion",
]

[workspace]
members = [
  "libraries/erks",
  "libraries/logline",
  "libraries/intime",
  "types/numba",
  "utilities/app",
  "utilities/ccutils",
  "utilities/dots",
  "utilities/colorscheme",
  "utilities/embellish",
  "utilities/genna",
  "utilities/grit",
  "utilities/scraps",
  "utilities/slink",
  "utilities/sysfo",
  "utilities/wallter",
  "utilities/whers",
]
resolver = "2"

[workspace.lints.rust]
unsafe_code = { level = "deny", priority = -1 }
unused = { level = "allow", priority = -2 }

[workspace.dependencies]
#| Handlers
thiserror = "2.0.12"
anyhow = "1.0.91"
once_cell = "1.20.2"
reqwest = { version = "0.12.20", features = ["json"] }
scraper = "0.23.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.23"
toml_edit = "0.22.27"
config = "0.15.11"

#| Information
sysinfo = "0.35.2"
battery = "0.7.8"
chrono = { version = "0.4.41", features = ["serde"] }
iana-time-zone = "0.1.61"

#| Utilities
clap = { version = "4.5.40", features = ["derive", "cargo"] }
clap_complete = "4.5.8"
convert_case = "0.8.0"
crossterm = "0.29.0"
current_dir = "0.1.1"
dark-light = "2.0.0"
directories = "6.0.0"
genai = "0.3.5"
glob = "0.3.1"
# ignore = "0.4"
image = "0.25.6"
rand = "0.9.1"
regex = "1"
which = "8.0.0"

#| Types
num = "0.4.3"
uom = "0.37.0"
num2words = "1.0.0"
num-bigfloat = { version = "^1.7.1", default-features = false }
bigdecimal = "0.4.5"
rust_decimal = "1.37.2"

#| Development
dotenv-vault = "0.1.2"
dotenvy = "0.15.7"
criterion = "0.6.0"
proptest = "1.7.0"
test-case = "3.3"
tempfile = "3.20.0"
lru = "0.14"
dashmap = "6.1.0"
simd-json = "0.15.1"
cfg-if = "1.0.1"
mimalloc = { version = "0.1.47", features = ["secure"] }

#| Windows-specific
winapi = { version = "0.3", features = ["winuser", "ntdef"] }
winit = "0.30.11"
winreg = "0.55.0"
