[package]
name = "ccutils"
default-run = "ccutils"
description = "Manages the ccutils workspace crates"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
directories = { workspace = true }
logline = { path = "../logline" }
tempfile = { workspace = true }
termsize = { workspace = true }
toml = { workspace = true }
