[package]
name = "logline"
description = "Manages tracing/log messages internally"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
intime = { path = "../intime" }
