[package]
name = "scraps"
description = "Implementation of a web scraper"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
#| Async
tokio = { workspace = true }

#| Web
reqwest = { workspace = true }
scraper = { workspace = true }

#| Logging
logline = { path = "../logline" }
# erks = { path = "../erks" }
anyhow = { workspace = true }
# tracing = "0.1"
# tracing-subscriber = "0.3"
