[package]
name = "whers"
description = "Search for files matching a pattern"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[dependencies]
logline = { path = "../logline" }
erks = { path = "../erks" }
thiserror = { workspace = true }
anyhow = { workspace = true }
which = { workspace = true }
whereis = { workspace = true }
whereismybin = { workspace = true }
clap = { workspace = true }
