[package]
name = "whers"
description = "Locate files or commands"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[dependencies]
logline = { path = "../logline" }
erks = { path = "../erks" }
clap = { workspace = true }
directories = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
which = { workspace = true }
criterion = { workspace = true }

[dev-dependencies]
