[package]
name = "intime"
description = "display duration in a human-readable format"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
# Backend [lib.rs]
battery = { workspace = true }
chrono = { workspace = true }
uom = { workspace = true }
thiserror = { workspace = true }
tracing-subscriber = { workspace = true }

# Frontend [main.rs]
clap = { workspace = true }
