[package]
name = "logline"
description = "manages tracing and debug messages internally"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
intime = { path = "../intime" }
