[profile.dev]
opt-level = 0

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

[workspace]
members = ["lib/project"]
resolver = "2"

[workspace.dependencies]
cargo_metadata = "0.23.0"
miette = "7.6.0"
thiserror = "2.0.18"
toml = "0.9.8"
tracing = "0.1.41"

[workspace.dependencies.craole-cc-project]
path = "lib/project"

[workspace.lints.clippy.cargo]
level = "warn"
priority = 0

[workspace.lints.clippy.cognitive_complexity]
level = "allow"
priority = 1

[workspace.lints.clippy.complexity]
level = "warn"
priority = 0

[workspace.lints.clippy.correctness]
level = "deny"
priority = 0

[workspace.lints.clippy.nursery]
level = "warn"
priority = 0

[workspace.lints.clippy.pedantic]
level = "warn"
priority = 0

[workspace.lints.clippy.perf]
level = "warn"
priority = 0

[workspace.lints.clippy.style]
level = "warn"
priority = 0

[workspace.lints.clippy.suspicious]
level = "warn"
priority = 0

[workspace.lints.rust.unsafe_code]
level = "deny"
priority = 0

[workspace.lints.rust.unused]
level = "allow"
priority = -1

[workspace.package]
authors = ["Craig 'Craole' Cole <craig.craole.cole@gmail.com>"]
categories = ["development-tools"]
edition = "2024"
homepage = "https://github.com/craole-cc"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/craole-cc/devtools"
version = "0.1.0"
