[workspace]
members = ["bin/*", "lib/*"]
exclude = ["bin/review", "bin/archive", "lib/review", "lib/archive"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2024"
repository = "https://github.com/craole-cc/devtools"
homepage = "https://github.com/craole-cc"
authors = ["Craig 'Craole' Cole <craig.craole.cole@gmail.com>"]
categories = ["development-tools"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["development-tools"]

[workspace.lints.rust]
unsafe_code = { level = "deny", priority = 0 }
unused = { level = "allow", priority = -1 }

[workspace.lints.clippy]
cargo = { level = "warn", priority = 0 }
complexity = { level = "warn", priority = 0 }
correctness = { level = "deny", priority = 0 }
nursery = { level = "warn", priority = 0 }
pedantic = { level = "warn", priority = 0 }
perf = { level = "warn", priority = 0 }
style = { level = "warn", priority = 0 }
suspicious = { level = "warn", priority = 0 }
# multiple_crate_versions = { level = "allow", priority = 1 }
cognitive_complexity = { level = "allow", priority = 1 }

[profile.dev]
opt-level = 0

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

[workspace.dependencies]
# -- Internal
ccutil = { path = "bin/cli" }
ephelog = { path = "lib/log" }
prjenv = { path = "lib/env" }

# -- Tracing & Error Handling
miette = "7.6.0"
thiserror = "2.0.18"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# -- Testing
temp-env = "0.3.6"

# -- Information Management
toml = "0.9.11"
dotenvy = "0.15.7"
