[package]
name = "numeral"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
logline = { path = "../../libraries/logline" }
erks = { path = "../../libraries/erks" }
clap = { workspace = true }
num2words = { workspace = true }
num = { workspace = true }
num-bigfloat = { workspace = true }
bigdecimal = { workspace = true }
once_cell = { workspace = true }
