[package]
name = "ccutils"
default-run = "ccutils"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
directories = { workspace = true }
toml = { workspace = true }
