[package]
name = "ccutils"
default-run = "ccutils"
description = "Manages binary crates of the ccutils workspace"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
directories = { workspace = true }
toml = { workspace = true }
