[package]
name = "colorscheme"
description = "Get or set the desktop color scheme"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = ["search", "find", "file", "filesystem", "tool"]

[lints]
workspace = true

[dependencies]
logline = { path = "../../libraries/logline" }
erks = { path = "../../libraries/erks" }
numba = { path = "../../types/numba" }
clap = { workspace = true }
directories = { workspace = true }
regex = { workspace = true }
which = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
