[package]
name = "embellish"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
#| Handlers
thiserror = { workspace = true }

#| Utilities
crossterm = { workspace = true }
