[package]
name = "genna"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
logline = { path = "../../libraries/logline" }
tokio = { workspace = true }
genai = { workspace = true }
dotenv-vault = { workspace = true }
dotenvy = { workspace = true }
