[package]
name = "scraps"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
#| Async
tokio = { workspace = true }

#| Web
reqwest = { workspace = true }
scraper = { workspace = true }

#| Logging
logline = { path = "../../libraries/logline" }
# erks = { path = "../../libraries/erks" }
anyhow = { workspace = true }
# tracing = "0.1"
# tracing-subscriber = "0.3"
