[package]
name = "sysfo"
default-run = "sysfo"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
once_cell = { workspace = true }
chrono = { workspace = true }
sysinfo = { workspace = true }
crossterm = { workspace = true }
battery = { workspace = true }
uom = { workspace = true }
clap = { workspace = true }
