[package]
name = "sysfo"
default-run = "sysfo"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
logline = { path = "../../libraries/logline" }
battery = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }
iana-time-zone = { workspace = true }
once_cell = { workspace = true }
sysinfo = { workspace = true }
uom = { workspace = true }
