[package]
name = "ccutils-env"
version = "0.1.0"
edition = "2024"
authors = ["Craig 'Craole' Cole <craig.craole.cole@gmail.com>"]
# description = { workspace = true }
# homepage = { workspace = true }
# repository = { workspace = true }
# license = { workspace = true }
# readme = { workspace = true }
# keywords = { workspace = true }
categories = ["config", "data-structures", "filesystem"]

[workspace.lints.rust]
unsafe_code = { level = "deny", priority = 0 }
unused = { level = "allow", priority = -1 }

[workspace.lints.clippy]
cargo = { level = "warn", priority = 0 }
complexity = { level = "warn", priority = 0 }
correctness = { level = "deny", priority = 0 }
nursery = { level = "warn", priority = 0 }
pedantic = { level = "warn", priority = 0 }
perf = { level = "warn", priority = 0 }
style = { level = "warn", priority = 0 }
suspicious = { level = "warn", priority = 0 }
# multiple_crate_versions = { level = "allow", priority = 1 }
cognitive_complexity = { level = "allow", priority = 1 }

[features]
default = [
  "derive",
  "fmt",
  "json",
  "macros",
  "metadata",
  "time",
  "tracing",
  #
]
derive = ["miette/derive"]
fmt = ["tracing", "tracing-subscriber?/fmt"]
macros = []
metadata = ["dep:cargo_metadata"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]
time = ["dep:chrono", "tracing-subscriber?/chrono", "tracing-subscriber?/time"]
json = ["tracing-subscriber?/json"]

[dependencies]
# -- Internal

# -- Error Handling
miette = "7.6.0"
thiserror = "2.0.18"

# -- Logging
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
], optional = true }

# -- Information Management
cargo_metadata = { version = "0.23.0", optional = true }
chrono = { version = "0.4", optional = true }
dotenv = "0.15"
toml = "0.9.8"

# -- Macros & Constructors
bitflags = "2.9.4"
cfg-if = "1.0.3"

# -- Color Support
anstream = "0.6"
nu-ansi-term = "0.50.3"
supports-color = "3.0.2"

[dev-dependencies]
